syntax = "proto3";

package go.micro.service.payment;
option go_package ="proto/payment";

service Payment {
	//添加方法
	rpc AddPayment(PaymentInfo) returns (PaymentID) {}
	//更新支付
	rpc UpdatePayment(PaymentInfo) returns (Response) {}
	//删除支付id
	rpc DeletePaymentByID(PaymentID) returns (Response) {}
	//通过payment id 查看所有信息
	rpc FindPaymentByID(PaymentID)returns(PaymentInfo) {}
	//查找所有支付
	rpc FindAllPayment(All)returns(PaymentAll){}

}

message PaymentInfo {
	int64  id = 1;
	string payment_name=2;
	//支付的secret id
	string payment_sid=3;
	bool payment_status=4;
	//支付login图片
	string PaymentImage= 5;
}

message PaymentID {
	int64 payment_id=1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}
message All {
}

message  PaymentAll {
	repeated PaymentInfo payment_info =1;
}